fix overflow

--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
 }
 
 /* Page LogIn */
+.container_login {
+    display: flex;
+    width: 100%;
+    overflow-y: hidden;
+}
+
 .auth-left {
     flex: 1.5;
     display: flex;
